<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="srbrettle.Calc.PresentFutureValue.MainActivity">

    <TextView
        android:id="@+id/textViewBrief"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:text="@string/input_brief"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btnCalculate"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/editTextVal4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnClear"
        android:layout_alignTop="@+id/btnCalculate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textViewUpdated"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btnCalculate"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10px"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnClear"
        android:layout_alignEnd="@+id/btnClear" />

    <CheckBox
        android:id="@+id/checkBoxVal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/input_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textViewBrief"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_3"
        android:id="@+id/checkBoxVal3"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/editTextVal2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_4"
        android:id="@+id/checkBoxVal4"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/editTextVal3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/checkBoxVal3"
        android:layout_alignEnd="@+id/checkBoxVal3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editTextVal1"
        android:hint="@string/input_1"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:layout_below="@+id/checkBoxVal1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editTextVal2"
        android:hint="@string/input_2"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:layout_below="@+id/checkBoxVal2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editTextVal3"
        android:hint="@string/input_3"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:layout_below="@+id/checkBoxVal3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/checkBoxVal3"
        android:layout_alignEnd="@+id/checkBoxVal3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editTextVal4"
        android:hint="@string/input_4"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:layout_below="@+id/checkBoxVal4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/checkBoxVal4"
        android:layout_alignEnd="@+id/checkBoxVal4" />

    <CheckBox
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_2"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkBoxVal2"
        android:layout_below="@+id/editTextVal1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
